Version 1.4.2 released September 1, 2015

    - Update license to fix OpenSSL vs. GPL conflict
    - Remove obsolete Debian files
    - Fix typos in help output

Version 1.4.1 released May 4, 2015

    - Fix use-after-free bug configuring base URL (github issue #44)

Version 1.4.0 released April 17, 2015

    - Added support for authentication version 4 (issue #51)
    - Added support for credentials via IAM role from EC2 meta-data (issue #48)
    - Fixed bug where `--erase' did not clear the mounted flag
    - Moved from Google project hosting to GitHub
    - Fixed compile problem on FreeBSD

Version 1.3.7 (r496) released 18 July 2013

    - Add `--keyLength' for overriding generated encryption key length

Version 1.3.6 (r493) released 16 July 2013

    - Fix use of MAX_HOST_NAME in http_io.c (issue #42)
    - Fix encryption key generation bug (on some systems)

Version 1.3.5 (r485) released 29 May 2013

    - Check for duplicate mount at startup (issue #10)
    - Remove obsolete backward-compatibility block size check

Version 1.3.4 (r476) released 2 Apr 2013

    - Support FUSE fallocate() call to zero unused blocks

Version 1.3.3 (r463) released 7 Apr 2012

    - Fix bug in validation of --baseURL parameter (issue #34)
    - Accept 404 Not Found as a valid response to a DELETE (issue #35)
    - Added a fix for building on Mac OS X (issue #32)

Version 1.3.2 (r451) released 14 May 2011

    - Added `--directIO' flag to disable kernel caching of the backed file.
    - Fixed bug where the stats file was not up to date (issue #26).
    - Fixed bug with `--blockCacheMaxDirty' not working (issue #25).
    - Added automatic block cache disk file resizing (issue #23).
    - Added `--maxUploadSpeed' and `--maxDownloadSpeed' flags.
    - Added `-rrs' flag to support Reduced Redundancy Storage.
    - Fixed missing warning for `--baseURL' when missing trailing slash.

Version 1.3.1 (r413) released 19 Oct 2009

    - Added `--blockCacheMaxDirty' flag.